[package]
name = "coruscant-nbt"
description = "A ser/de library for Minecraft's NBT format"
repository = "https://github.com/luojia65/coruscant/coruscant-nbt"
readme = "README.md"
authors = ["luojia65 <me@luojia.cc>"]
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.3"
serde = "1.0"
flate2 = "1.0"
# flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
# flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-transcode = "1.1"

[features]
default = ["gzip", "zlib"]
# Enable support for gzip compressed streams, including from-functions
# for deserialization and to-functions for serialization.
gzip = []
# Enable support for zlib compressed streams, including from-functions
# for deserialization and to-functions for serialization.
zlib = []
